--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ dj-database-url==0.4.1
 Django==1.11
 gunicorn==19.6.0
 lxml==3.7.1
+mysqlclient==1.3.12
 psycopg2==2.6.2
+pytz==2017.3
 requests==2.12.4
 selenium==3.0.2
 whitenoise==3.2
