--- a/Pipfile
+++ b/Pipfile
@@ -9,13 +9,17 @@ name = "pypi"
 
 "beautifulsoup4" = "==4.5.1"
 dj-database-url = "==0.4.1"
-django = "==1.11"
+django = "==1.11.20"
 gunicorn = "==19.6.0"
 lxml = "==3.7.1"
 mysqlclient = "==1.3.12"
 "psycopg2" = "==2.6.2"
 pytz = "==2017.3"
-requests = "==2.12.4"
+requests = "*"
+certifi = "*"
+chardet = "*"
+idna = "*"
+"urllib3" = "*"
 selenium = "==3.0.2"
 whitenoise = "==3.2"
 
