--- a/Pipfile
+++ b/Pipfile
@@ -8,20 +8,21 @@ name = "pypi"
 [packages]
 
 "beautifulsoup4" = "==4.5.1"
-dj-database-url = "==0.4.1"
+dj-database-url = "==0.4.2"
 django = "==1.11.20"
-gunicorn = "==19.6.0"
+gunicorn = "==19.7.1"
 lxml = "==3.7.1"
 mysqlclient = "==1.3.12"
-"psycopg2" = "==2.6.2"
-pytz = "==2017.3"
+"psycopg2" = "==2.7.4"
+pytz = "==2018.3"
 requests = "*"
 certifi = "*"
 chardet = "*"
 idna = "*"
 "urllib3" = "*"
 selenium = "==3.0.2"
-whitenoise = "==3.2"
+whitenoise = "==3.3.1"
+django-extensions = "*"
 
 
 [dev-packages]
